--- a/main.html
+++ b/main.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-
+    <!--Import general code in javascript-->
+    <link rel="stylesheet" href="css/custom.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
+    <div id="search-cep">
+        <div class="row search-address">
+            <div class="col s5">
+                <div class="input-field">
+                    <input placeholder="Informe seu CEP" class="cep" type="text" onkeypress="mascara(this, cep)" maxlength="9">
+                    <label for="cep">CEP</label>
+                </div>
+            </div>
+            <div class="col s2">
+                <a class="waves-effect waves-light btn-large search-address-button">Pesquisar</a>
+            </div>
+        </div>
+    </div>
+
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/mask.js"></script>
 </body>
 
 </html>
