Input error information

--- a/main.html
+++ b/main.html
@@ -20,9 +20,10 @@
     <div id="search-cep">
         <div class="row search-address">
             <div class="col s5">
-                <div class="input-field">
+                <div class="input-field input-field-cep">
                     <input placeholder="Informe seu CEP" class="cep" type="text" onkeypress="mascara(this, cep)" maxlength="9">
                     <label for="cep">CEP</label>
+                    <span class="helper-text"></span>
                 </div>
             </div>
             <div class="col s2">
