--- a/main.html
+++ b/main.html
@@ -17,8 +17,12 @@
 </head>
 
 <body>
-    <div id="search-cep">
-        <div class="row search-address">
+    <ul class="tabs tabs-fixed-width tab-demo z-depth-1">
+        <li class="tab"><a href="#search-cep" class="active">Search by CEP</a></li>
+        <li class="tab"><a href="#search-address">Search by address</a></li>
+    </ul>
+    <div id="search-cep" class="col s12">
+        <div class="row">
             <div class="col s5">
                 <div class="input-field input-field-cep">
                     <input placeholder="Inform your CEP - Ex:00000-000" class="cep" type="text" onkeypress="mascara(this, cep)" maxlength="9">
@@ -27,6 +31,52 @@
                 </div>
             </div>
             <div class="col s2">
+                <a class="waves-effect waves-light btn-large search-cep-button">
+                    <div class="valueSearch active">Search</div>
+                    <div class="preloader-wrapper small">
+                        <div class="spinner-layer spinner-red-only">
+                            <div class="circle-clipper left">
+                                <div class="circle"></div>
+                            </div>
+                            <div class="gap-patch">
+                                <div class="circle"></div>
+                            </div>
+                            <div class="circle-clipper right">
+                                <div class="circle"></div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div id="search-address" class="col s12">
+        <div class="row">
+            <div class="col s6 input-field">
+                <select>
+                      <option value="0" disabled selected>Choose your option</option>
+                      <option value="1">Option 1</option>
+                      <option value="2">Option 2</option>
+                      <option value="3">Option 3</option>
+                    </select>
+                <label>Select the state</label>
+            </div>
+            <div class="col s6 input-field">
+                <select disabled>
+                      <option value="0" disabled selected>Choose your option</option>
+                      <option value="1">Option 1</option>
+                      <option value="2">Option 2</option>
+                      <option value="3">Option 3</option>
+                    </select>
+                <label>Select your city</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s11">
+                <input placeholder="Placeholder" id="address" type="text" class="validate" disabled>
+                <label for="address">Enter your address</label>
+            </div>
+            <div class="col s1">
                 <a class="waves-effect waves-light btn-large search-address-button">
                     <div class="valueSearch active">Search</div>
                     <div class="preloader-wrapper small">
@@ -47,7 +97,6 @@
         </div>
     </div>
     <div id="tableResult" class="displayInvisible">
-
         <table>
             <thead>
                 <tr>
@@ -56,13 +105,9 @@
                 </tr>
             </thead>
             <tbody>
-
             </tbody>
         </table>
     </div>
-
-
-
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="js/jquery.min.js"></script>
