--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <ul class="tabs tabs-fixed-width tab-demo z-depth-1">
-        <li class="tab"><a href="#search-cep" class="active">Search by CEP</a></li>
-        <li class="tab"><a href="#search-address">Search by address</a></li>
+    <ul class="tabs tabs-fixed-width tab-demo z-depth-1" id="tabs-cep">
+        <li class="tab"><a href="#search-cep" class="active search-cep">Search by CEP</a></li>
+        <li class="tab"><a href="#search-address" class="search-address">Search by address</a></li>
     </ul>
     <div id="search-cep" class="col s12">
         <div class="row">
@@ -52,28 +52,22 @@
     </div>
     <div id="search-address" class="col s12">
         <div class="row">
-            <div class="col s6 input-field">
+            <div class="col s6 input-field select-state">
                 <select>
-                      <option value="0" disabled selected>Choose your option</option>
-                      <option value="1">Option 1</option>
-                      <option value="2">Option 2</option>
-                      <option value="3">Option 3</option>
+                      <option value="0" selected>Choose your option</option>
                     </select>
                 <label>Select the state</label>
             </div>
-            <div class="col s6 input-field">
+            <div class="col s6 input-field select-city">
                 <select disabled>
-                      <option value="0" disabled selected>Choose your option</option>
-                      <option value="1">Option 1</option>
-                      <option value="2">Option 2</option>
-                      <option value="3">Option 3</option>
+                      <option value="0" selected>Choose your option</option>
                     </select>
                 <label>Select your city</label>
             </div>
         </div>
         <div class="row">
-            <div class="input-field col s11">
-                <input placeholder="Placeholder" id="address" type="text" class="validate" disabled>
+            <div class="input-field col s11 input-address">
+                <input placeholder="Placeholder" type="text" class="validate address" disabled>
                 <label for="address">Enter your address</label>
             </div>
             <div class="col s1">
