--- a/main.html
+++ b/main.html
@@ -103,7 +103,7 @@
         </table>
     </div>
     <div id="print-error" class="displayInvisible">
-        <h6>Nenhum valor encontrado</h6>
+        <h6>No value found</h6>
     </div>
 
     <!--JavaScript at end of body for optimized loading-->
